k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-service
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - host: catalog.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 80
